--- a/dbt_amazon/dbt_project.yml
+++ b/dbt_amazon/dbt_project.yml
@@ -32,5 +32,19 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_amazon:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      +schema: staging
+      +materialized: table
+
+    intermediate:
+      +schema: intermediate
+      +materialized: table
+
+    mart:
+      +schema: mart
+      +materialized: table
+
+    reporting:
+      +schema: reporting
+      +materialized: table
+
