--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,14 @@ services:
 
 
   dbt:
-    image: python:3.11-slim
+    build: .
     container_name: analytics_dbt
     depends_on:
       - postgres
     volumes:
       - .:/app
-    working_dir: /app
+      - ./dbt_amazon:/root/.dbt # Mount the dbt profiles directory
+    working_dir:  /app/dbt_amazon # make sure to set the working directory to where the dbt project is located
     command: ["sleep", "infinity"]
 
 volumes:
